--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,9 @@ dependencies {
     compile 'javax.servlet:jstl:1.2'
     compile 'org.eclipse.persistence:eclipselink:2.6.2'
     compile 'org.postgresql:postgresql:9.4-1206-jdbc42'
+    compile 'kr.pe.kwonnam.jsp:jsp-template-inheritance:0.3.RELEASE'
     compile 'com.twilio.sdk:twilio-java-sdk:5.5.1'
+
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-all:1.10.19'
     testCompile 'org.jdom:jdom:2.0.2'
