--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,22 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
+
+    <context-param>
+        <param-name>jsp-inheritance-prefix</param-name>
+        <param-value>/WEB-INF/layouts/</param-value>
+    </context-param>
+
+    <context-param>
+        <param-name>jsp-inheritance-suffix</param-name>
+        <param-value>.jsp</param-value>
+    </context-param>
+
     <welcome-file-list>
-        <welcome-file>agents.jsp</welcome-file>
+        <welcome-file>available_phone_numbers.jsp</welcome-file>
     </welcome-file-list>
     <servlet>
-        <servlet-name>agent-list</servlet-name>
-        <servlet-class>com.twilio.calltracking.servlet.agent.AgentsServlet</servlet-class>
+        <servlet-name>available-phone-numbers</servlet-name>
+        <servlet-class>com.twilio.calltracking.servlet.phonenumbers.AvailableServlet</servlet-class>
     </servlet>
 
 
     <servlet-mapping>
-        <servlet-name>agent-list</servlet-name>
+        <servlet-name>available-phone-numbers</servlet-name>
         <url-pattern>/</url-pattern>
-        <url-pattern>/agents</url-pattern>
+        <url-pattern>/phone-numbers</url-pattern>
     </servlet-mapping>
 
 </web-app>
