--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ version '1.0'
 
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath 'org.postgresql:postgresql:9.4-1206-jdbc42'
@@ -19,12 +19,12 @@ jettyRun.contextPath = '';
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
     compile 'javax.servlet:javax.servlet-api:3.1.0'
-    compile 'javax.servlet:jstl:1.2'
+    compile 'javax.servlet.jsp.jstl:jstl:1.2'
     compile 'org.eclipse.persistence:eclipselink:2.6.2'
     compile 'org.postgresql:postgresql:9.4-1206-jdbc42'
     compile 'kr.pe.kwonnam.jsp:jsp-template-inheritance:0.3.RELEASE'
