--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,16 +31,16 @@
 
     <servlet>
         <servlet-name>calltracking-forwardcall</servlet-name>
-        <servlet-class>com.twilio.calltracking.servlets.calltracking.ForwardCallServlet</servlet-class>
+        <servlet-class>com.twilio.calltracking.servlets.calltracking.LeadCallServlet</servlet-class>
     </servlet>
 
     <servlet>
-        <servlet-name>leadsources-create</servlet-name>
+        <servlet-name>lead-sources-create</servlet-name>
         <servlet-class>com.twilio.calltracking.servlets.leadsources.CreateServlet</servlet-class>
     </servlet>
 
     <servlet>
-        <servlet-name>leadsources-edit</servlet-name>
+        <servlet-name>lead-sources-edit</servlet-name>
         <servlet-class>com.twilio.calltracking.servlets.leadsources.EditServlet</servlet-class>
     </servlet>
 
@@ -55,6 +55,12 @@
     </servlet>
 
     <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>/scripts/*</url-pattern>
+        <url-pattern>/css/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
         <servlet-name>available-phone-numbers</servlet-name>
         <url-pattern>/</url-pattern>
         <url-pattern>/phone-numbers</url-pattern>
@@ -67,17 +73,17 @@
 
     <servlet-mapping>
         <servlet-name>calltracking-forwardcall</servlet-name>
-        <url-pattern>/forward</url-pattern>
+        <url-pattern>/lead</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
-        <servlet-name>leadsources-create</servlet-name>
-        <url-pattern>/leadsources-create</url-pattern>
+        <servlet-name>lead-sources-create</servlet-name>
+        <url-pattern>/leadsources/create</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
-        <servlet-name>leadsources-edit</servlet-name>
-        <url-pattern>/leadsources-edit</url-pattern>
+        <servlet-name>lead-sources-edit</servlet-name>
+        <url-pattern>/leadsources/edit</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
