--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,6 @@ apply plugin: 'jetty'
 apply plugin: 'org.flywaydb.flyway'
 
 jettyRun.contextPath = '';
-sourceCompatibility = 1.8
 
 repositories {
     jcenter()
@@ -28,10 +27,12 @@ dependencies {
     compile 'org.eclipse.persistence:eclipselink:2.6.2'
     compile 'org.postgresql:postgresql:9.4-1206-jdbc42'
     compile 'kr.pe.kwonnam.jsp:jsp-template-inheritance:0.3.RELEASE'
-    compile 'com.twilio.sdk:twilio-java-sdk:5.5.1'
+    compile 'com.twilio.sdk:twilio:7.0.0-rc-25'
 
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-all:1.10.19'
+    testCompile 'org.powermock:powermock-module-junit4:1.6.5'
+    testCompile 'org.powermock:powermock-api-mockito:1.6.5'
+
     testCompile 'org.jdom:jdom:2.0.2'
     testCompile 'pl.pragmatists:JUnitParams:1.0.4'
 }
