--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
 
 plugins {
     id 'java'
+    id 'war'
     id 'checkstyle'
     id 'org.flywaydb.flyway' version '4.0.3'
     id 'org.akhikhl.gretty' version '1.2.4'
@@ -16,14 +17,15 @@ checkstyle {
     toolVersion = "6.1.1"
 }
 
+group 'com.twilio.calltracking'
+version '1.0'
+
 gretty {
     httpPort = 8080
     contextPath = ''
     logbackConfigFile = "src/main/resources/logback.xml"
+    jettyXmlFile = "src/main/resources/jetty-logback-access.xml"
 }
-
-group 'com.twilio.calltracking'
-version '1.0'
 
 repositories {
     jcenter()
@@ -31,12 +33,17 @@ repositories {
 }
 
 dependencies {
+    compile 'ch.qos.logback:logback-classic:1.2.2'
+    compile 'ch.qos.logback:logback-access:1.2.2'
     compile 'javax.servlet:javax.servlet-api:3.1.0'
     compile 'javax.servlet.jsp.jstl:jstl:1.2'
     compile 'org.eclipse.persistence:eclipselink:2.6.2'
     compile 'org.postgresql:postgresql:9.4-1206-jdbc42'
     compile 'kr.pe.kwonnam.jsp:jsp-template-inheritance:0.3.RELEASE'
     compile 'com.twilio.sdk:twilio:7.0.0-rc-29'
+
+    gretty 'ch.qos.logback:logback-classic:1.2.2'
+    gretty 'ch.qos.logback:logback-access:1.2.2'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.powermock:powermock-module-junit4:1.6.5'
